# legacy-sipXlang-abitibi-fr_CA

./: Makefile.am  configure.ac  sipxecs-lang-abitibi-fr_CA.spec.in  sipxlang-abitibi-fr_CA.spec.in
sipxpbx/: sipxplugin.beans.xml  sipxplugins.beans.xml
sipxpbx/WEB-INF/: LoginPage_fr_CA.properties  sipXconfig-web_fr_CA.properties
sipxpbx/WEB-INF/acd/: AcdAgentPresencePanel_fr_CA.properties  AcdAgentsPanel_fr_CA.properties  AcdAgentsStatsPanel_fr_CA.properties  AcdCallsStatsPanel_fr_CA.properties  AcdHistoryPage_fr_CA.properties  AcdLinesPanel_fr_CA.properties  AcdPresenceServer_fr_CA.properties  AcdQueueSelector_fr_CA.properties  AcdQueuesPanel_fr_CA.properties  AcdQueuesStatsPanel_fr_CA.properties  AcdSelectServerPanel_fr_CA.properties  AcdServerPage_fr_CA.properties  AcdServersPanel_fr_CA.properties  AcdSupervisorConsole_fr_CA.properties  AddAcdAgent_fr_CA.properties  EditAcdAgent_fr_CA.properties  EditAcdLine_fr_CA.properties  EditAcdQueue_fr_CA.properties  ListAcdServers_fr_CA.properties
sipxpbx/WEB-INF/admin/: AlarmTypes_fr_CA.properties  AlarmsPage_fr_CA.properties  BackupPage_fr_CA.properties  BackupRestoreConfigurationPanel_fr_CA.properties  BulkImport_fr_CA.properties  StatusWarning_fr_CA.properties  (+5 more)
sipxpbx/acd/: sipxacd-agent_fr_CA.properties  sipxacd-audio_fr_CA.properties  sipxacd-line_fr_CA.properties  sipxacd-queue_fr_CA.properties
sipxpbx/commserver/: siptrunk_fr_CA.properties
sipxpbx/polycom/: line_fr_CA.properties
sipxpbx/sipxconference/: bridge_fr_CA.properties  conference_fr_CA.properties
sipxpbx/sipxvxml/: autoattendant_fr_CA.properties
(+157 files in other folders)
